// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom-src-paths build should create valid app 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    
  </head>
  <body>
    <div id=\\"app\\"><div data-reactroot=\\"\\">Hello custom src paths</div></div>
    <script type=\\"text/javascript\\" src=\\"http://localhost:4002/runtime-27f87d9f0d19bf7deb87.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4002/vendors~main-9aa20d39de042df69f71.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4002/main-2218cfee6bcdd73ca471.js\\" crossorigin=\\"anonymous\\"></script>
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    
  </head>
  <body>
    <div id=\\"app\\"><div data-reactroot=\\"\\">Hello custom src paths</div></div>
    <script type=\\"text/javascript\\" src=\\"http://localhost:4002/runtime-27f87d9f0d19bf7deb87.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4002/vendors~main-9aa20d39de042df69f71.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4002/main-2218cfee6bcdd73ca471.js\\" crossorigin=\\"anonymous\\"></script>
  </body>
</html>",
  "warnings": Array [],
}
`;

exports[`custom-src-paths build should generate the expected files 1`] = `
Object {
  "index.html": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    
  </head>
  <body>
    <div id=\\"app\\"><div data-reactroot=\\"\\">Hello custom src paths</div></div>
    <script type=\\"text/javascript\\" src=\\"http://localhost:4002/runtime-27f87d9f0d19bf7deb87.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4002/vendors~main-9aa20d39de042df69f71.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4002/main-2218cfee6bcdd73ca471.js\\" crossorigin=\\"anonymous\\"></script>
  </body>
</html>",
  "main-2218cfee6bcdd73ca471.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime-27f87d9f0d19bf7deb87.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vendors~main-9aa20d39de042df69f71.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`custom-src-paths start should start a development server 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    
  </head>
  <body>
    <div id=\\"app\\"><div data-reactroot=\\"\\">Hello custom src paths</div></div>
    <script type=\\"text/javascript\\" src=\\"/runtime.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/vendors~main.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/main.js\\"></script>
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    
  </head>
  <body>
    <div id=\\"app\\"><div data-reactroot=\\"\\">Hello custom src paths</div></div>
    <script type=\\"text/javascript\\" src=\\"/runtime.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/vendors~main.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/main.js\\"></script>
  </body>
</html>",
  "warnings": Array [],
}
`;
